<resources>
    <string name="app_name">todo</string>
    <string name="todos">Todos</string>
    <string name="todo_details">Todo Details</string>
    <string name="search">Search</string>
    <string name="title">Title :</string>
    <string name="priority">Priority: </string>
    <string name="description">Description: </string>
    <string name="due_date">Due Date: </string>
    <string name="completed">Completed: </string>
    <string name="no_internet">لا يوجد الانترنيت</string>
</resources>